[metadata]
name = gas-elec-ha-sdr-reader
description = Python3 script to read gas and electric meters using a USB RTL-SDR dongle that runs on Docker \
                and reports values to Home Assistant via MQTT
description_file = README.md
author = Clifford B. Brown 
license = MIT
home_page = https://github.com/cbrown350/gas-elec-ha-sdr-reader

[options]
python_requires = >=3.9

[files]
packages =
    gas_elec_publisher
    gas_elec_publisher.settings
    gas_elec_publisher.mqtt_config

[entry_points]
console_scripts =
    gas_elec_publisher = gas_elec_publisher.gas_elec_publisher:main    